--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "standard": "^17.0.0"
+    "nodemon": "2.0.20",
+    "standard": "17.0.0"
   }
 }
