--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "express-float-btn",
-  "version": "1.0.0",
+  "name": "react-float-btn",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "node server",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --outDir dist/server --ssr src/entry-server.jsx"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "4.18.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "nodemon": "2.0.20",
-    "standard": "17.0.0"
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "express": "^4.18.2",
+    "standard": "^17.0.0",
+    "vite": "^4.1.0"
   }
 }
